--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,13 @@
 version: "3"
 services:
-  snisni-frontend:
+  frontend:
+    container_name: snisni-frontend
     volumes:
-    - ../frontend:/usr/src/app
-    working_dir: /usr/src/app
+      - ../frontend:/usr/src/frontend
+    working_dir: /usr/src/frontend
     build:
       context: ../frontend
       dockerfile: Dockerfile
-    container_name: snisni-frontend
     command: "npm run dev"
     ports: 
       - "80:3000"
@@ -15,6 +15,23 @@ services:
       ../frontend/docker.env
     networks:
       - code-network
+    depends_on: 
+      - api
+  api:
+    container_name: snisni-api
+    volumes:
+      - ../api:/var/www:cached
+      - ./web/www.conf:/usr/local/etc/php-fpm.d/www.conf:cached
+      - ~/.ssh:/root/.ssh/
+    build: 
+      context: ../api
+      dockerfile: Dockerfile
+    restart: always
+    expose:
+      - "9000"
+    networks: 
+      - code-network
+
 
 
 networks:
