--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,6 @@ services:
     container_name: snisni-api
     volumes:
       - ../api:/var/www:cached
-      - ./web/www.conf:/usr/local/etc/php-fpm.d/www.conf:cached
       - ~/.ssh:/root/.ssh/
     build: 
       context: ../api
@@ -31,9 +30,22 @@ services:
       - "9000"
     networks: 
       - code-network
-
-
-
+  webserver:
+        container_name: snisni-server
+        restart: always
+        build:
+            context: ./web
+            dockerfile: Dockerfile
+        volumes:
+            - ./web/www.conf:/usr/local/etc/php-fpm.d/www.conf:cached
+            - ./web/sites:/etc/nginx/conf.d
+        ports:
+            - "8080:80"
+            - "4430:443"
+        links:
+            - api
+        networks:
+          - code-network
 networks:
   code-network:
     driver: bridge
