--- a/web/sites/main.conf
+++ b/web/sites/main.conf
@@ -1,9 +1,31 @@
 server {
     listen 80;
-    root /var/www/html;
-    index index.html;
+    root /var/www/public;
+
+    recursive_error_pages on;
+
+    index index.html index.htm index.php;
+
+    charset utf-8;
 
     location / {
-        try_files $uri $uri /index.html;
+        try_files $uri $uri/ /index.php?$query_string;
+    }
+
+    location = /favicon.ico { access_log off; log_not_found off; }
+    location = /robots.txt  { access_log off; log_not_found off; }
+
+    location ~ \.php$ {
+        fastcgi_pass api:9000;
+        fastcgi_index index.php;
+        fastcgi_buffers 16 16k;
+        fastcgi_buffer_size 32k;
+        fastcgi_intercept_errors on;
+        fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
+        include fastcgi_params; 
+    }
+
+    location ~ /\.(?!well-known).* {
+        deny all;
     }
 }
