--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     command: "npm run dev"
     ports:
       - "80:3000"
-    env_file: ../frontend/docker.env
+    env_file: ../frontend/dev.env
     networks:
       - code-network
     depends_on:
